cluster/gitops/media/fileflows/proxy/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: fileflows-proxy
specs:
  - description: fileflows-proxy
    endpointSelector:
      matchLabels:
        app.kubernetes.io/instance: fileflows-proxy
        app.kubernetes.io/name: fileflows-proxy
    egress:
      # DNS resolution
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              endpoints.netpols.home.arpa/cluster-dns: "true"
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP
            rules:
              dns:
                - matchPattern: fileflows.com
      # Proxy access to fileflows.com
      - toFQDNs:
          - matchName: fileflows.com
        toPorts:
          - ports:
              - port: "443"
                protocol: TCP
    ingress:
      # kubelet for healthcheck
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "80"
                protocol: TCP
              - port: "9113"
                protocol: TCP
      # Requests from fileflows
      - fromEndpoints:
          - matchLabels:
              app.kubernetes.io/instance: fileflows # TODO fileflows server and workers
        toPorts:
          - ports:
              - port: "80"
                protocol: TCP
      # Metrics
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: "9113"
                protocol: TCP
